--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         body {
             background-color: var(--background);
             font-family: 'Inter', sans-serif;
+            
             background-image: radial-gradient(circle at 25% 25%, rgba(14, 165, 233, 0.15), transparent 30%),
                               radial-gradient(circle at 75% 75%, rgba(245, 158, 11, 0.1), transparent 30%);
             background-attachment: fixed;
@@ -167,7 +168,7 @@
         const spotlightContainer = document.getElementById('spotlight-container');
         const gridContainer = document.getElementById('matches-grid');
         const DATA_URL = 'https://raw.githubusercontent.com/Jitendra-unatti/fancode/refs/heads/main/data/fancode.json';
-        const PLAY_BASE = 'http://Teamro0045.free.nf/teamrofemcodeplyr2.html?url='; // 🔥 changed here
+        const PLAY_BASE = 'https://samarthsattani66.github.io/Femcodem3u8plyr/url='; // 🔥 changed here
 
         async function fetchAndRender() {
             try {
