--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="ENJOY FREE LIVE">
-    <meta name="keywords" content="LIVE TV, SPORTS, STREAMING">
+    <meta name="keywords" content="JIOTV, LIVETV, SPORTS, MOVIES, MUSIC">
     <meta name="author" content="unknown">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-    <title>TEAMROHITOFFICAL45_PLAYER</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <title>TEAMROHITOFFICAL45_LIVE</title>
 
     <link href="https://cdn.jsdelivr.net/npm/plyr@3.6.2/dist/plyr.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/plyr@3.6.12/dist/plyr.min.js"></script>
@@ -14,87 +14,126 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
 
     <style>
-        body { background:#000; color:#fff; margin:0; font-family:Poppins,sans-serif }
-        .loading { position:fixed; top:0; left:0; width:100%; height:100%; background:#000; z-index:9999 }
-        .loading-text { position:absolute; top:0; left:0; right:0; bottom:0; margin:auto; height:100px; text-align:center; line-height:100px }
-        .loading-text span { color:#00b3ff; margin:0 3px }
-        .iframe-wrapper { position:relative; padding-top:56.25%; display:none }
-        .iframe-wrapper iframe { position:absolute; top:0; left:0; width:100%; height:100%; border:0 }
-        #player { width:100%; display:none; --plyr-color-main:#00b0ff }
-        .watermark { position:absolute; bottom:3px; right:3px; font-size:10px; color:#ffffff22; pointer-events:none }
-        .telegram-button { display:block; margin:15px auto; padding:7px 15px; background:#0088cc; color:#fff; border-radius:6px; text-decoration:none; width:180px }
+        html, body { margin:0; padding:0; background:#000; color:#fff; font-family:Poppins,sans-serif; }
+
+        /* Loading Screen */
+        .loading {
+            position:fixed; top:0; left:0; width:100%; height:100%;
+            background:#000; z-index:9999;
+        }
+        .loading-text {
+            position:absolute; top:0; left:0; right:0; bottom:0;
+            margin:auto; height:100px; text-align:center; line-height:100px;
+        }
+        .loading-text span {
+            display:inline-block; margin:0 5px;
+            color:#00b3ff; font-family:'Quattrocento Sans',sans-serif;
+        }
+
+        /* Video Player */
+        #player {
+            width:100%; display:none;
+            --plyr-color-main:#15b4ff;
+        }
+
+        /* Iframe Player */
+        .iframe-wrapper {
+            position:relative;
+            padding-top:56.25%;
+            height:0; overflow:hidden;
+            display:none;
+        }
+        .iframe-wrapper iframe {
+            position:absolute;
+            top:0; left:0; width:100%; height:100%;
+            border:0;
+        }
+
+        /* Watermark */
+        .watermark {
+            position:absolute; bottom:2px; right:2px;
+            font-size:9px; color:#ffffff22;
+            pointer-events:none; font-style:italic;
+            font-family:"Courier New",monospace;
+        }
+
+        /* Telegram Button */
+        .telegram-button {
+            display:block; margin:18px auto; padding:6px 10px;
+            background:#0088cc; color:#fff;
+            text-align:center; border-radius:5px;
+            font-size:14px; text-decoration:none; width:180px;
+        }
+        .telegram-button:hover { background:#006a99; }
     </style>
 </head>
 
 <body>
 
-    <!-- Loading Screen -->
+    <!-- Loading -->
     <div class="loading" id="loading">
         <div class="loading-text">
-            <span>T</span><span>E</span><span>A</span><span>M</span><span>R</span><span>O</span><span>H</span><span>I</span><span>T</span><span>O</span><span>F</span><span>F</span><span>I</span><span>C</span><span>I</span><span>A</span><span>L</span><span>4</span><span>5</span>
+            <span>T</span><span>E</span><span>A</span><span>M</span><span>R</span><span>O</span>
+            <span>H</span><span>I</span><span>T</span><span>O</span><span>F</span><span>F</span>
+            <span>I</span><span>C</span><span>I</span><span>A</span><span>L</span><span>4</span><span>5</span>
         </div>
     </div>
 
     <!-- Video Player -->
-    <video id="player" autoplay controls crossorigin playsinline>
+    <video id="player" autoplay controls playsinline crossorigin>
         <source id="m3u8-url" src="" type="application/x-mpegURL">
     </video>
 
     <!-- Iframe Player -->
     <div class="iframe-wrapper" id="iframe-wrapper">
         <iframe id="iframe-player"
-                allowfullscreen
-                allow="encrypted-media"
-                sandbox="allow-scripts allow-same-origin allow-presentation">
+            allowfullscreen allow="encrypted-media"
+            sandbox="allow-scripts allow-same-origin allow-presentation">
         </iframe>
     </div>
 
+    <!-- Watermark -->
     <div class="watermark">𝙏𝙀𝘼𝙈𝙍𝙊𝙃𝙄𝙏𝙊𝙁𝙁𝙄𝘾𝙄𝘼𝙇𝟰𝟱</div>
 
     <!-- Telegram -->
     <a href="https://t.me/+lkbpBqFd0FljNzJl" class="telegram-button" target="_blank">
-        Join Telegram Channel
+        Join Our Telegram Channel
     </a>
 
     <script>
-        const p = new URLSearchParams(location.search);
-        let streamUrl = p.get("id");
+        const params = new URLSearchParams(location.search);
+        let streamUrl = params.get("id");
 
-        // Convert to Mydonai PLAYER format
+        // Convert To Mydonai Player Format
         if (streamUrl) {
             streamUrl = "https://mydonai/.?url=" + streamUrl;
         }
 
-        setTimeout(() => {
-            document.getElementById("loading").style.display = "none";
-        }, 1200);
+        setTimeout(()=>{ document.getElementById("loading").style.display="none"; },1000);
 
-        const videoEl = document.getElementById("player");
-        const srcEl = document.getElementById("m3u8-url");
+        const video = document.getElementById("player");
         const iframeBox = document.getElementById("iframe-wrapper");
         const iframe = document.getElementById("iframe-player");
 
         if (!streamUrl) {
-            alert("Stream URL missing!");
-        } else {
-            if (streamUrl.includes(".m3u8")) {
+            alert("Invalid or missing Stream URL");
+        } else if (streamUrl.includes(".m3u8")) {
 
-                srcEl.src = streamUrl;
-                videoEl.style.display = "block";
+            document.getElementById("m3u8-url").src = streamUrl;
+            video.style.display = "block";
 
-                if (Hls.isSupported()) {
-                    const hls = new Hls();
-                    hls.loadSource(streamUrl);
-                    hls.attachMedia(videoEl);
-                    hls.on(Hls.Events.MANIFEST_PARSED, () => new Plyr(videoEl));
-                } else {
-                    new Plyr(videoEl);
-                }
-
+            if (Hls.isSupported()) {
+                const hls = new Hls();
+                hls.loadSource(streamUrl);
+                hls.attachMedia(video);
+                hls.on(Hls.Events.MANIFEST_PARSED, ()=> new Plyr(video));
             } else {
-                iframe.src = streamUrl;
-                iframeBox.style.display = "block";
+                new Plyr(video);
             }
+
+        } else {
+            iframe.src = streamUrl;
+            iframeBox.style.display = "block";
         }
     </script>
 
