--- a/index.html
+++ b/index.html
@@ -1,31 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Star Hindi Stream</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Direct Shaka Player</title>
 
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
-            overflow: hidden;
-        }
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.11/shaka-player.ui.min.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.11/controls.min.css" crossorigin="anonymous">
 
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-    </style>
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    html, body {
+      background: #000;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      font-family: system-ui, sans-serif;
+    }
+    .shaka-video-container {
+      position: absolute;
+      inset: 0;
+    }
+    video {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      background: #000;
+    }
+    .shaka-spinner-container {
+      display: none !important;
+    }
+  </style>
 </head>
 
 <body>
-    <iframe 
-        src="https://bd-streams.site/crx/master.php?id=starhindi" 
-        allowfullscreen>
-    </iframe>
+
+<div class="shaka-video-container" data-shaka-player>
+  <video autoplay playsinline></video>
+</div>
+
+<script>
+  function getParam(name) {
+    return new URLSearchParams(window.location.search).get(name);
+  }
+
+  document.addEventListener('DOMContentLoaded', async () => {
+    shaka.polyfill.installAll();
+
+    if (!shaka.Player.isBrowserSupported()) {
+      alert('Browser not supported');
+      return;
+    }
+
+    const mpdUrl = getParam('url');
+    const keyId  = getParam('keyid');
+    const key    = getParam('key');
+
+    if (!mpdUrl) {
+      alert('Missing MPD URL');
+      return;
+    }
+
+    const video = document.querySelector('video');
+    const player = new shaka.Player(video);
+    new shaka.ui.Overlay(player, document.querySelector('.shaka-video-container'), video);
+
+    if (keyId && key) {
+      player.configure({
+        drm: {
+          clearKeys: {
+            [keyId]: key
+          }
+        }
+      });
+    }
+
+    player.configure({
+      streaming: {
+        lowLatencyMode: true,
+        bufferingGoal: 15,
+        rebufferingGoal: 2
+      }
+    });
+
+    player.addEventListener('error', e => {
+      console.error('Player Error:', e.detail);
+    });
+
+    try {
+      await player.load(mpdUrl);
+      console.log('Stream Loaded');
+    } catch (e) {
+      console.error('Load failed', e);
+    }
+  });
+</script>
+
 </body>
 </html>
+
