--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Direct Shaka Player</title>
+  <title>TEAMROHITOFFICIAL45</title>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.11/shaka-player.ui.min.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.11/controls.min.css" crossorigin="anonymous">
@@ -12,90 +12,105 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
       background: #000;
-      width: 100%;
-      height: 100%;
+      height: 100vh;
+      width: 100vw;
       overflow: hidden;
-      font-family: system-ui, sans-serif;
+      font-family: system-ui, -apple-system, sans-serif;
     }
     .shaka-video-container {
       position: absolute;
       inset: 0;
+      width: 100%;
+      height: 100%;
     }
     video {
       width: 100%;
       height: 100%;
-      object-fit: contain;
       background: #000;
+      object-fit: contain;
     }
-    .shaka-spinner-container {
+    .shaka-spinner-container,
+    .shaka-spinner,
+    .shaka-spinner-svg {
       display: none !important;
+      visibility: hidden !important;
+      opacity: 0 !important;
     }
   </style>
 </head>
 
 <body>
-
-<div class="shaka-video-container" data-shaka-player>
-  <video autoplay playsinline></video>
-</div>
+  <div class="shaka-video-container" data-shaka-player>
+    <video autoplay playsinline preload="metadata"
+      poster="https://i.ibb.co/d0yXW75V/108693714.jpg"></video>
+  </div>
 
 <script>
-  function getParam(name) {
-    return new URLSearchParams(window.location.search).get(name);
+document.addEventListener('DOMContentLoaded', async () => {
+  shaka.polyfill.installAll();
+
+  if (!shaka.Player.isBrowserSupported()) return;
+
+  const params = new URLSearchParams(window.location.search);
+  const streamUrl = params.get('url');
+  const keyParam  = params.get('key');
+
+  if (!streamUrl) {
+    alert('Use: ?url=mpd&key=keyid:key');
+    return;
   }
 
-  document.addEventListener('DOMContentLoaded', async () => {
-    shaka.polyfill.installAll();
-
-    if (!shaka.Player.isBrowserSupported()) {
-      alert('Browser not supported');
-      return;
-    }
-
-    const mpdUrl = getParam('url');
-    const keyId  = getParam('keyid');
-    const key    = getParam('key');
-
-    if (!mpdUrl) {
-      alert('Missing MPD URL');
-      return;
-    }
-
-    const video = document.querySelector('video');
-    const player = new shaka.Player(video);
-    new shaka.ui.Overlay(player, document.querySelector('.shaka-video-container'), video);
-
-    if (keyId && key) {
-      player.configure({
-        drm: {
-          clearKeys: {
-            [keyId]: key
-          }
-        }
-      });
-    }
-
-    player.configure({
-      streaming: {
-        lowLatencyMode: true,
-        bufferingGoal: 15,
-        rebufferingGoal: 2
+  let drmConfig = {};
+  if (keyParam) {
+    const [kid, key] = keyParam.split(':');
+    drmConfig = {
+      clearKeys: {
+        [kid]: key
       }
-    });
+    };
+  }
 
-    player.addEventListener('error', e => {
-      console.error('Player Error:', e.detail);
-    });
+  const video = document.querySelector('video');
+  const player = new shaka.Player();
+  await player.attach(video);
 
-    try {
-      await player.load(mpdUrl);
-      console.log('Stream Loaded');
-    } catch (e) {
-      console.error('Load failed', e);
+  const container = document.querySelector('.shaka-video-container');
+  const ui = new shaka.ui.Overlay(player, container, video);
+
+  ui.configure({
+    controlPanelElements: [
+      'play_pause', 'time_and_duration', 'mute', 'volume',
+      'spacer', 'language', 'captions', 'picture_in_picture',
+      'quality', 'fullscreen'
+    ],
+    volumeBarColors: {
+      base: 'rgba(255, 192, 203, 0.3)',
+      level: 'rgb(255, 105, 180)'
+    },
+    seekBarColors: {
+      base: 'rgba(255, 255, 0, 0.3)',
+      buffered: 'rgba(255, 255, 0, 0.6)',
+      played: 'rgb(255, 255, 0)'
     }
   });
-</script>
 
+  player.configure({
+    drm: drmConfig,
+    streaming: {
+      lowLatencyMode: true,
+      bufferingGoal: 15,
+      rebufferingGoal: 2,
+      bufferBehind: 15
+    }
+  });
+
+  try {
+    await player.load(streamUrl);
+  } catch (e) {
+    console.error(e);
+  }
+});
+</script>
 </body>
 </html>
 
