--- a/index.html
+++ b/index.html
@@ -2,159 +2,129 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>TG-SAMARTH</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- PLYR -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/plyr@3.6.12/dist/plyr.css">
-<script src="https://cdn.jsdelivr.net/npm/hls.js@1.1.4/dist/hls.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/plyr@3.6.12/dist/plyr.min.js"></script>
+<!-- MOBILE FIX -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+<title>TeamRohitOfficial45 Live</title>
 
 <style>
-/* ===== RESET ===== */
-* {
+/* ===== GLOBAL STYLE ===== */
+body {
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    font-family: 'Poppins', Arial, sans-serif;
+    background: radial-gradient(circle at top, #111 0%, #000 70%);
+    color: gold;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
 }
 
-/* ===== FULLSCREEN BACKGROUND ===== */
-html, body {
-    width: 100%;
-    height: 100%;
-    background: #000;
+/* ===== GOLD GLOW TEXT ===== */
+.loading-message {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 15px;
+    padding: 12px 25px;
+    border-radius: 12px;
+    color: #FFD700;
+    background: rgba(255, 215, 0, 0.08);
+    border: 1px solid rgba(255, 215, 0, 0.4);
+    box-shadow: 0 0 15px #FFD700, 0 0 30px #FFD700;
+    animation: pulse 1.6s infinite alternate;
+}
+
+@keyframes pulse {
+    from { box-shadow: 0 0 10px #FFD700; }
+    to { box-shadow: 0 0 30px #FFD700; }
+}
+
+/* ===== VIDEO PLAYER ===== */
+.player-container {
+    width: 95%;
+    max-width: 1200px;
+    margin: 20px auto;
+    border-radius: 18px;
     overflow: hidden;
-}
-
-/* ===== PLAYER CENTER ===== */
-.player-wrapper {
-    position: fixed;
-    inset: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    box-shadow: 0 0 40px rgba(255, 215, 0, 0.4);
     background: #000;
 }
 
-/* VIDEO */
-#player {
+/* IMPORTANT MOBILE FIX */
+.player-container iframe {
     width: 100%;
     height: 100%;
-    max-width: 100vw;
-    max-height: 100vh;
-    object-fit: contain;
-    background: black;
+    border: none;
 }
 
-/* ===== GOLD THEME ===== */
-:root {
-    --plyr-color-main: #ffd700;
+/* ===== TELEGRAM BUTTON ===== */
+.join-telegram-container {
+    margin-top: 25px;
 }
 
-.plyr--video .plyr__controls {
-    background: linear-gradient(to top, rgba(0,0,0,0.9), rgba(0,0,0,0.6));
-}
-
-.plyr__control {
-    color: #ffd700 !important;
-}
-
-.plyr__control:hover {
-    background: rgba(255, 215, 0, 0.25);
-}
-
-.plyr__control--overlaid {
-    background: radial-gradient(circle, #ffd700 0%, #b8860b 65%);
-    box-shadow: 0 0 20px rgba(255, 215, 0, 0.8);
-}
-
-.plyr__progress--played,
-.plyr__volume--display {
-    background: linear-gradient(90deg, #ffd700, #ffcc00);
-}
-
-.plyr__time {
-    color: #ffd700;
-}
-
-/* LOADER */
-.loading {
-    position: fixed;
-    inset: 0;
-    background: #000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-}
-
-.loading-text span {
+.join-telegram-btn {
+    padding: 14px 30px;
     font-size: 18px;
     font-weight: bold;
-    margin: 0 2px;
-    background: linear-gradient(120deg, #ffd700 20%, #fff4b0 45%, #ffd700 70%);
-    background-size: 200% auto;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    animation: shine 2s linear infinite;
+    color: #000;
+    background: linear-gradient(135deg, #FFD700, #ffae00);
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    box-shadow: 0 0 20px rgba(255, 215, 0, 0.8);
+    transition: 0.3s ease;
 }
 
-@keyframes shine {
-    from { background-position: 0% center; }
-    to { background-position: 200% center; }
+.join-telegram-btn:hover {
+    transform: scale(1.08);
+    box-shadow: 0 0 35px gold;
+}
+
+/* ===== MOBILE FIX ===== */
+@media (max-width: 600px) {
+    .loading-message {
+        font-size: 16px;
+    }
 }
 </style>
 </head>
 
 <body>
 
-<!-- LOADER -->
-<div id="loading" class="loading">
-    <div class="loading-text">
-        <span>T</span><span>E</span><span>A</span><span>M</span>
-        <span>R</span><span>O</span><span>H</span><span>I</span><span>T</span>
-        <span>O</span><span>F</span><span>F</span><span>I</span><span>C</span><span>I</span><span>A</span><span>L</span>
-        <span>4</span><span>5</span>
+<div class="loading-message">
+    ⭐ Share This Link With Your Friends ⭐
+</div>
+
+<div class="player-container">
+    <div style="padding:56.25% 0 0 0; position:relative;">
+        <iframe 
+            src="https://teamrom3u8plyr2.pages.dev/?url=https://allinonereborn.xyz/amit/hls2.php"
+            allow="fullscreen; encrypted-media; picture-in-picture"
+            allowfullscreen
+            webkitallowfullscreen
+            mozallowfullscreen
+            playsinline
+            style="position:absolute; top:0; left:0; width:100%; height:100%;">
+        </iframe>
     </div>
 </div>
 
-<!-- PLAYER -->
-<div class="player-wrapper">
-    <video id="player" playsinline controls></video>
+<div class="join-telegram-container">
+    <button class="join-telegram-btn"
+        onclick="window.open('https://t.me/+lkbpBqFd0FljNzJl','_blank')">
+        🔥 Join Telegram Channel
+    </button>
 </div>
 
 <script>
-document.addEventListener("DOMContentLoaded", () => {
-
-    const video = document.getElementById("player");
-    const source = "https://amg01269-amg01269c1-sportstribal-emea-5204.playouts.now.amagi.tv/ts-eu-w1-n2/playlist/amg01269-willowtvfast-willowplus-sportstribalemea/playlist.m3u8";
-
-    if (Hls.isSupported()) {
-        const hls = new Hls();
-        hls.loadSource(source);
-        hls.attachMedia(video);
-
-        hls.on(Hls.Events.MANIFEST_PARSED, () => {
-            new Plyr(video, {
-                controls: [
-                    'play',
-                    'progress',
-                    'current-time',
-                    'mute',
-                    'volume',
-                    'settings',
-                    'fullscreen'
-                ]
-            });
-
-            setTimeout(() => {
-                document.getElementById("loading").style.display = "none";
-            }, 1200);
-        });
+setTimeout(() => {
+    if (confirm("🔥 Join Our Telegram Channel @teamrohitofficial45 🔥")) {
+        window.open("https://t.me/+lkbpBqFd0FljNzJl", "_blank");
     }
-});
+}, 3000);
 </script>
 
 </body>
 </html>
-
